--- a/package.json
+++ b/package.json
@@ -32,16 +32,17 @@
   },
   "homepage": "https://github.com/stacks-network/clarunit#readme",
   "dependencies": {
-    "@hirosystems/clarinet-sdk": "^2.4.1",
-    "@stacks/transactions": "^6.11.0",
+    "@hirosystems/clarinet-sdk": "3.1.0",
+    "@stacks/common": "^7.0.2",
+    "@stacks/transactions": "7.1.0",
     "chokidar-cli": "^3.0.0",
     "path": "^0.12.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.6",
-    "vitest": "^1.4.0",
-    "vitest-environment-clarinet": "^2.0.0"
+    "typescript": "5.8.3",
+    "vite": "6.3.5",
+    "vitest": "3.2.3",
+    "vitest-environment-clarinet": "2.3.0"
   },
   "devDependencies": {
-    "fast-check": "^3.15.0"
+    "fast-check": "4.1.1"
   }
 }
