--- a/example/package.json
+++ b/example/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Run unit tests on this project.",
   "private": true,
+  "type": "module",
   "scripts": {
     "clarunit": "clarunit",
     "test": "vitest run",
@@ -12,14 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hirosystems/clarinet-sdk": "2.4.0",
-    "@hirosystems/clarinet-sdk-wasm": "^2.2.0",
-    "@stacks/clarunit": "^0.0.2",
-    "@stacks/transactions": "^6.9.0",
+    "@hirosystems/clarinet-sdk": "3.1.0",
+    "@stacks/clarunit": "file:../",
+    "@stacks/transactions": "^7.1.0",
     "chokidar-cli": "^3.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.4",
-    "vitest-environment-clarinet": "^1.0.0"
+    "typescript": "^5.8.3",
+    "vite": "^7.0.0",
+    "vitest": "^3.2.4",
+    "vitest-environment-clarinet": "^2.3.0"
   }
 }
